added and adaptive sections index page

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,83 @@
         </header>
 
         <main class="main">
+            <section class="wealth">
+                <div class="wealth__border">
+                    <div class="wealth__wrapper">
+                        <div class="wealth__block">
+                            <div class="wealth__date">26-27</div>
+                            <div class="wealth__date wealth__month">October</div>
+                            <div class="wealth__date">2016</div>
+                        </div>
+                        <div class="wealth__block">
+                            <div class="wealth__title">Wealth top forum israel 2016</div>
+                            <div class="wealth__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry. Lorem Ipsum has been the industry's standard dummy</div>
+                            <div class="wealth__descr">Barcelona</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
+            <section class="register">
+                <div class="container">
+                    <div class="register__text">
+                        TOP FORUM is an international business communication company. Our main idea is to take your
+                        business to the next level. To make this transformation happen you need to have a platform to
+                        meet hundreds of new clients and specialists, become aware of new trends and soak up fresh ideas
+                        from best experts. It's what we call the forum impact. Face to face communication with
+                        like-minded professionals is a personal experience which leads your business to a great success.
+                        TOP FORUM business conferences give you the unique opportunity to set new goals, open your new
+                        strategy and implement the campaigns that will give you superiority in your industry. Just
+                        invest in your future.
+                    </div>
+                    <div class="register__wrapper">
+                        <div class="register__block">
+                            <div class="register__block-img"><img src="img/index/icons/sponsors.png" alt="sponsors">
+                            </div>
+                            <div class="register__block-title">FOR FUTURE SPONSORS AND EXHIBITORS</div>
+                            <div class="register__block-subtitle">TOP FORUM conferences are the best route to raise
+                                brand awareness, get pre- and after-event promotion among your target audience, confirm
+                                the highest level of your business, present your company services and catch the interest
+                                of highly qualified prospects and as a result to find new clients</div>
+                            <div class="register__block-wrapper">
+                                <button class="register__block-btn">Learn more</button>
+                                <div class="register__block-descr">Wealth TOP FORUM Israel 2016</div>
+                            </div>
+                        </div>
+                        <div class="register__block">
+                            <div class="register__block-img"><img src="img/index/icons/delegate.png" alt="delegate">
+                            </div>
+                            <div class="register__block-title">BECOME A DELEGATE</div>
+                            <div class="register__block-subtitle">TOP FORUM business conferences and events serve as the
+                                best platform to learn useful insights and new trends in your business area, engage with
+                                peers from the global community and choose the best available offer, and all that in one
+                                place, so your participation will safe dozens of working hours.</div>
+                            <div class="register__block-wrapper">
+                                <button class="register__block-btn">Learn more</button>
+                                <div class="register__block-descr">Wealth TOP FORUM Israel 2016</div>
+                            </div>
+                        </div>
+                        <div class="register__block">
+                            <div class="register__block-img"><img src="img/index/icons/speakers.png" alt="speakers">
+                            </div>
+                            <div class="register__block-title">FOR FUTURE SPEAKERS</div>
+                            <div class="register__block-subtitle">We thoroughly choose the key experts to make a speech
+                                at TOP FORUM international conferences and our audience obtains the most up-to-date
+                                information about new trends on the market. Should you like to share useful insights,
+                                become a speaker or to take part in panel discussion, please contact us.</div>
+                            <div class="register__block-wrapper">
+                                <button class="register__block-btn">Learn more</button>
+                                <div class="register__block-descr">Wealth TOP FORUM Israel 2016</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="register__btns">
+                        <button class="register__btns-btn">Register now</button>
+                        <button class="register__btns-btn register__btns-btn-black">Subscribe</button>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="footer">
