added and adaptived reviews, video, clients sections

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,53 @@
                     </div>
                 </div>
             </section>
+
+            <section class="reviews">
+                <div class="container">
+                    <h2 class="reviews__title title">Customer reviews</h2>
+                    <div class="reviews__wrapper">
+                        <div class="reviews__block">
+                            <div class="reviews__block-img"><img src="img/index/icons/review.png" alt="review"></div>
+                            <div class="reviews__block-subblock">
+                                <div class="reviews__block-subblock-name">Alexander and Vera</div>
+                                <div class="reviews__block-subblock-date">04 September 2015</div>
+                                <div class="reviews__block-subblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</div>
+                            </div>
+                        </div>
+                        <div class="reviews__block">
+                            <div class="reviews__block-img"><img src="img/index/icons/review_notfound.png" alt="notfound"></div>
+                            <div class="reviews__block-subblock">
+                                <div class="reviews__block-subblock-name">Vinogradov Nikita and Oksana</div>
+                                <div class="reviews__block-subblock-date">04 September 2015</div>
+                                <div class="reviews__block-subblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="video">
+                <div class="container">
+                    <div class="video__title title">Promo video</div>
+                    <div class="video__promo">
+                        <iframe class="video__promo-item" src="https://www.youtube.com/embed/SUiMr3h50_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+
+            <section class="clients">
+                <div class="container">
+                    <div class="clients__title title">Our Clients</div>
+                    <div class="clients__wrapper">
+                        <div class="clients__wrapper-block"><img src="img/index/clients/business.png" alt="business"></div>
+                        <div class="clients__wrapper-block"><img src="img/index/clients/interlike.png" alt="interlike"></div>
+                        <div class="clients__wrapper-block"><img src="img/index/clients/portal.png" alt="portal"></div>
+                        <div class="clients__wrapper-block"><img src="img/index/clients/university.png" alt="university"></div>
+                        <div class="clients__wrapper-block"><img src="img/index/clients/angel.png" alt="angel"></div>
+                        <div class="clients__wrapper-block"><img src="img/index/clients/outdoor.jpg" alt="outdoor"></div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="footer">
